--- a/src/App.css
+++ b/src/App.css
@@ -47,8 +47,12 @@ textarea {
 }
 
 select {
+  background-color: rgba(255, 255, 255, 0.6);
   margin-left: 5px;
   margin-right: 5px;
+  padding: 5px;
+  border: none;
+  font-size: 14px;
 }
 
 main {
@@ -108,7 +112,7 @@ main {
 .UserText {
   background-color: rgba(255, 255, 255, 0.6);
   padding: 5px;
-  overflow:auto;
+  overflow: auto;
   border: none;
   
   grid-area: input;
