Fix issue with viewport size check.

--- a/src/App.css
+++ b/src/App.css
@@ -135,7 +135,11 @@ main {
   color: #ffffff;
 }
 
-@media only screen and (max-width: 750px){
+@media only screen and (max-width: 850px){
+  body {
+    font-size: 18px;
+  }
+  
   header {
     height: 85px;
   }
